--- a/views/index.slim
+++ b/views/index.slim
@@ -15,3 +15,5 @@ table.entry-list.table.table-condensed
       td
         a href="#{e.url}"
           = e.title
+        span.date
+          = e.date
