--- a/views/feed.slim
+++ b/views/feed.slim
@@ -13,4 +13,4 @@ feed xmlns="http://www.w3.org/2005/Atom" xml:lang="ja"
       link href="#{e.url}" /
       id myhatebu://eid/#{e.eid}
       updated = e.created_at.strftime("%FT%TZ")
-      /summary = e.desc
+      summary = e.desc
