--- a/views/feed.slim
+++ b/views/feed.slim
@@ -13,4 +13,8 @@ feed xmlns="http://www.w3.org/2005/Atom" xml:lang="ja"
       link href="#{e.url}" /
       id myhatebu://eid/#{e.eid}
       updated = e.created_at.strftime("%FT%TZ")
-      summary = e.desc
+      summary
+        | #{e.desc}
+        br
+        a href="http://b.hatena.ne.jp/entry/#{e.url.match(%r{https?://(.*?/.*)})[1]}"
+          img src="http://myhatebu.herokuapp.com/img/B.gif"
