--- a/views/index.slim
+++ b/views/index.slim
@@ -3,18 +3,19 @@
 table.entry-list.table.table-condensed
   - @hotentries.each do |e|
     tr
-      td.text-right
-        - if e.users < 10
-          span.users.U10
-            | #{e.users}
-            span.suffix users
-        - else
-          span.users.O10
-            | #{e.users}
-            span.suffix users
+      td.users.text-right
+        a href="http://b.hatena.ne.jp/entry/#{e.url.match(%r{https?://(.*?/.*)})[1]}" target="_blank"
+          - if e.users < 10
+              span.U10
+                | #{e.users}
+                span.suffix &nbsp;users
+          - else
+              span.O10
+                | #{e.users}
+                span.suffix &nbsp;users
       td
         .title
-          a href="#{e.url}"
+          a href="#{e.url}" target="_blank"
             = e.title
         .sub
           span.date
